Basic server now runs -- no templates.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 
 <body>
   <div id="constellations" class="game"></div>
-  <script src="app.js"></script>
+  <script src="game.js"></script>
 </body>
 </html>
